# miniGU

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PYTHON_API_USAGE.md  README.md  async_test.json  build.rs  cli_test.gql  cli_test_with_data.gql  commit_message.txt  comprehensive_rust_test.py  comprehensive_test.py  debug_insert_data.py  deny.toml  final_test.py  final_validation_test.py  gql_syntax_test.py  pyproject.toml  raw_rust_test.py  rust-toolchain.toml  rustfmt.toml  sample_data.json  simple_gql_test.py  simple_test.gql  taplo.toml  test_api_usage.py  test_async_database.mgu  test_current_functionality.py  test_data_loading.py  test_fixed_format.py  test_import_export.py  test_import_export_with_data.py  test_minigu_api.py  test_rust_bindings.py  test_rust_insert.py  typos.toml
minigu-cli/: Cargo.toml
minigu-cli/src/: cli.rs  lib.rs  main.rs  script_executor.rs  shell.rs
minigu-cli/src/shell/: command.rs  context.rs  editor.rs  mod.rs  output.rs
minigu-cli/tests/: cli_test.rs  common.rs  shell_test.rs
minigu-cli/tests/snapshots/: cli_test__cli_help.snap  shell_test__shell_command_help.snap  shell_test__shell_command_help_mode.snap  shell_test__shell_help.snap
minigu-test/: Cargo.toml  README.md
minigu-test/gql/basic/: create_graph.slt
minigu-test/src/: lib.rs  slt_adapter.rs
minigu-test/tests/: e2e_test.rs  sqllogictest.rs
minigu-test/tests/snapshots/finbench/: tsr1.snap  tsr2.snap  tsr3.snap  tsr4.snap  tsr5.snap  tsr6.snap
minigu-test/tests/snapshots/gql_on_one_page/: gql_on_one_page.snap
minigu-test/tests/snapshots/misc/: ddl_drop.snap  ddl_truncate.snap  dml_dql.snap  vector_index.snap
minigu-test/tests/snapshots/opengql/: create_graph.snap  create_schema.snap  insert.snap  match.snap  match_and_insert.snap  session_set.snap
minigu-test/tests/snapshots/snb/: is1.snap  is2.snap  is3.snap  is4.snap  is5.snap  is6.snap  is7.snap
minigu/binder/: Cargo.toml
minigu/binder/src/: error.rs  lib.rs  mock_catalog.rs  object_ref.rs  types.rs
minigu/binder/src/binder/: catalog.rs  common.rs  mod.rs  object_expr.rs  object_ref.rs  procedure_call.rs  procedure_spec.rs  query.rs  value_expr.rs
minigu/binder/src/program/: mod.rs
minigu/binder/src/resolver/: mod.rs  resolve_catalog_ref.rs  resolve_procedure.rs
minigu/binder/src/statement/: catalog.rs  mod.rs  object_ref.rs  procedure.rs  procedure_spec.rs  type_element.rs
minigu/catalog/: Cargo.toml
minigu/catalog/src/: error.rs  graph_type.rs  label_set.rs  lib.rs  named_ref.rs  property.rs  provider.rs  types.rs
minigu/catalog/src/memory/: directory.rs  graph.rs  graph_type.rs  mod.rs  schema.rs
minigu/common/: Cargo.toml
minigu/common/src/: constants.rs  data_chunk.rs  data_type.rs  error.rs  lib.rs  logical_type.rs  ordering.rs  result_set.rs  types.rs  value.rs
minigu/common/src/data_chunk/: display.rs  mod.rs  row.rs
minigu/common/src/datatype/: error.rs  types.rs  value.rs
minigu/context/: Cargo.toml
minigu/context/src/: database.rs  error.rs  graph.rs  lib.rs  procedure.rs  session.rs
minigu/core/: .wal  Cargo.toml
minigu/core/src/: database.rs  error.rs  lib.rs  metrics.rs  session.rs
minigu/core/src/procedures/: create_test_graph_data.rs  echo.rs  mod.rs  show_graph.rs  show_procedures.rs
minigu/execution/: Cargo.toml
minigu/execution/src/: builder.rs  error.rs  lib.rs
minigu/execution/src/evaluator/: binary.rs  column_ref.rs  constant.rs  datum.rs  scalar_function.rs
minigu/execution/src/executor/: aggregate.rs  join.rs  limit.rs  mod.rs  project.rs  sort.rs  utils.rs  vertex_property_scan.rs
minigu/execution/src/source/: mock.rs
minigu/ir/: Cargo.toml
minigu/ir/src/: lib.rs  named_ref.rs  pattern.rs
minigu/ir/src/bound/: catalog.rs  object_ref.rs  procedure_call.rs  procedure_spec.rs  query.rs  type_element.rs  value_expr.rs
minigu/ir/src/plan/: call.rs  mod.rs  one_row.rs  sort.rs
minigu/main/: Cargo.toml
minigu/main/src/: database.rs  error.rs  lib.rs  metrics.rs  options.rs  result.rs  session.rs
minigu/main/src/procedure/: manager.rs
minigu/main/src/procedures/: create_test_graph.rs  mod.rs
minigu/parser/: Cargo.toml  build.rs
minigu/parser/benches/: alloc.rs  parse.rs
minigu/parser/src/: error.rs  lexer.rs  lib.rs  macros.rs  span.rs
minigu/parser/src/ast/: call.rs  catalog.rs  common.rs  data.rs  element.rs  expression.rs  lexical.rs  mod.rs  object.rs  object_expr.rs  predicate.rs  procedure.rs  procedure_call.rs  procedure_spec.rs  program.rs  query.rs  reference.rs  session.rs  transaction.rs  variable.rs
minigu/parser/src/parser/: mod.rs  options.rs  precedence.rs  token.rs  utils.rs
minigu/parser/tests/: parser_test.rs
minigu/planner/: Cargo.toml
minigu/planner/src/: error.rs  lib.rs
minigu/planner/src/logical_planner/: catalog.rs  mod.rs  procedure_call.rs  procedure_spec.rs  query.rs
minigu/planner/src/optimizer/: mod.rs
minigu/python/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  build.rs  lib.rs  minigu.py  minigu_python.py  pyproject.toml  rust_debug_test.py  setup.py  simple_debug_test.py  test_api.py  test_async.py  test_async_api.py  test_bindings.py  test_config.py  test_create_insert.py  test_error_handling.py  test_graph_structures.py  test_load_data.py  test_load_save.py  test_minigu_api.py  test_minigu_lib.rs  test_performance.py  test_real_load_save.py
minigu/python/examples/: python_api_example.py
minigu/python/minigu.egg-info/: PKG-INFO  SOURCES.txt
minigu/python/src/: ci.yml  lib.rs
minigu/python/test_minigu_lib/: Cargo.toml
minigu/python/test_minigu_lib/src/: main.rs
minigu/python/tests/: test_load_save.py
minigu/storage/: Cargo.toml
minigu/storage/diskann-rs/: README.md
minigu/storage/src/: error.rs  lib.rs  storage.rs  transaction.rs
minigu/storage/src/ap/: mod.rs  (+2 more)
minigu/storage/tests/: graph_integration_test.rs  integration_tests.rs  isolation_level_test.rs
python/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  minigu.py
python/minigu.egg-info/: PKG-INFO  SOURCES.txt
(+427 files in other folders)
