[workspace]
members = [
    # Public API
    "minigu/main",

    # The all-in-one CLI client
    "minigu-cli",

    # System-level tests
    "minigu-test",

    # Internal
    "minigu/binder",
    "minigu/catalog",
    "minigu/common",
    "minigu/parser",
    "minigu/storage",
    "minigu/execution",
    "minigu/ir",
    "minigu/planner",
    "minigu/context",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/TuGraph-family/miniGU"

[workspace.lints.clippy]
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
suspicious = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
arrow = { version = "55.1.0", default-features = false }
auto_impl = "1.3.0"
divan = "0.1.21"
gql-parser = { path = "minigu/parser", features = ["std", "serde", "miette"] }
indexmap = "2.9.0"
insta = { version = "1.43.1", features = ["yaml"] }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
miette = { version = "7.6.0" }
minigu = { path = "minigu/main" }
minigu-binder = { path = "minigu/binder" }
minigu-catalog = { path = "minigu/catalog" }
minigu-common = { path = "minigu/common" }
minigu-context = { path = "minigu/context" }
minigu-execution = { path = "minigu/execution" }
minigu-ir = { path = "minigu/ir" }
minigu-planner = { path = "minigu/planner" }
minigu-storage = { path = "minigu/storage" }
paste = "1.0.15"
rayon = "1.10.0"
serde = { version = "1.0.219", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
] }
smol_str = { version = "0.3.2", default-features = false }
tabled = { version = "0.19.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0.12", default-features = false }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
