[workspace]
members = [
    # Library API
    "minigu/core",

    # CLI client
    "minigu-cli",

    # End-to-end tests
    "minigu-test",

    # Internal
    "minigu/catalog",
    "minigu/common",
    "minigu/gql/parser",
    "minigu/gql/planner",
    "minigu/gql/execution",
    "minigu/storage",
    "minigu/context",
    "minigu/python",
]

resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/TuGraph-family/miniGU"
version = "0.1.0"

[workspace.lints.clippy]
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
suspicious = "warn"

[workspace.dependencies]
arrow = { version = "55.2.0", default-features = false }
dashmap = "6.1.0"
half = { version = "2.4.1", features = ["num-traits"] }
hashbrown = "0.15.2"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
miette = { version = "7.6.0" }
ordered-float = { version = "5.0.0", features = ["serde"] }
postcard = "1.1.3"
rayon = "1.10.0"
serde = { version = "1.0.219", default-features = false, features = [
    "alloc",
    "derive",
    "rc",
] }
smol_str = { version = "0.3.2", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
winnow = { version = "0.7.12", default-features = false, features = ["alloc"] }

num-traits = "0.2.16"
parking_lot = "0.12.3"

diskann = { path = "minigu/storage/diskann-rs/diskann", version = "0.1.0" }
vector = { path = "minigu/storage/diskann-rs/vector", version = "0.1.0" }

gql-parser = { path = "minigu/gql/parser", version = "0.1.0", features = [
    "std",
    "serde",
    "miette",
] }
minigu = { path = "minigu/core", version = "0.1.0" }
minigu-catalog = { path = "minigu/catalog", version = "0.1.0" }
minigu-common = { path = "minigu/common", version = "0.1.0" }
minigu-context = { path = "minigu/context", version = "0.1.0" }
minigu-execution = { path = "minigu/gql/execution", version = "0.1.0" }
minigu-planner = { path = "minigu/gql/planner", version = "0.1.0" }
minigu-storage = { path = "minigu/storage", version = "0.1.0" }
minigu-transaction = { path = "minigu/transaction", version = "0.1.0" }

anyhow = "1.0.98"
approx = "0.5.1"
auto_impl = "1.3.0"
bitvec = "1.0.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "wrap_help"] }
cmake = "0.1.54"
crc32fast = "1.5.0"
crossbeam-skiplist = "0.1.3"
csv = "1.3.1"
divan = "0.1.21"
glob = "0.3"
insta = { version = "1.43.1", features = ["yaml"] }
insta-cmd = "0.6.0"
libtest-mimic = "0.8.1"
logos = { version = "0.15.0", default-features = false, features = [
    "export_derive",
] }
lru = "0.16.0"
macro_rules_attribute = "0.2.2"
pastey = "0.1.0"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py37"] }
rand = "0.9.2"
rustyline = { version = "16.0.0", features = ["derive"] }
serde_json = "1.0.141"
serial_test = "3.2.0"
smallvec = "1.15.1"
sqllogictest = "0.28"
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
temp-dir = "0.1.16"
temp-file = "0.1.9"
tempfile = "3.20.0"
thiserror = { version = "2.0.12", default-features = false }
uuid = "1.17.0"
walkdir = "2.5.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
