[package]
edition.workspace = true
name = "minigu-cli"
version = "0.1.0"

[[bin]]
name = "minigu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.34", features = ["derive", "wrap_help"] }
gql-parser = { workspace = true }
itertools = { workspace = true }
lru = "0.14.0"
miette = { workspace = true, features = ["fancy"] }
minigu = { workspace = true }
rustyline = { version = "15.0.0", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
insta-cmd = "0.6.0"

[lints]
workspace = true
