[package]
edition.workspace = true
license.workspace = true
name = "minigu-binder"
repository.workspace = true
version.workspace = true

[dependencies]
gql-parser = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-ir = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
