[package]
edition.workspace = true
license.workspace = true
name = "minigu-catalog"
repository.workspace = true
version.workspace = true

[dependencies]
minigu-common = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["union", "serde"] }
thiserror = { workspace = true }

[lints]
workspace = true
