[package]
edition.workspace = true
name = "minigu-common"
version = "0.1.0"

[dependencies]
arrow = { workspace = true }
enum-as-inner = "0.6.1"
itertools = { workspace = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
paste = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"

[lints]
workspace = true
