[package]
edition.workspace = true
name = "minigu-common"
version = "0.1.0"

[dependencies]
arrow = { workspace = true }
csv = "1.3.1"
enum-as-inner = "0.6.1"
itertools = { workspace = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tabled = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
