[package]
edition.workspace = true
license.workspace = true
name = "minigu-common"
repository.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
csv = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
ordered-float = { workspace = true }
pastey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
