[package]
edition.workspace = true
name = "minigu-context"
repository.workspace = true
version = "0.1.0"

[dependencies]
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-ir = { workspace = true }
minigu-storage = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
