[package]
edition.workspace = true
license.workspace = true
name = "minigu-context"
repository.workspace = true
version.workspace = true

[dependencies]
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-storage = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
