[package]
edition.workspace = true
license.workspace = true
name = "minigu-context"
repository.workspace = true
version.workspace = true

[dependencies]
gql-parser = { workspace = true }
miette = { workspace = true }
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-storage = { workspace = true }
minigu-transaction = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
