[package]
edition.workspace = true
license.workspace = true
name = "minigu-execution"
repository.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
auto_impl = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-context = { workspace = true }
minigu-ir = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
