[package]
edition.workspace = true
name = "minigu-ir"
repository.workspace = true
version = "0.1.0"

[dependencies]
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }

[lints]
workspace = true
