[package]
edition.workspace = true
license.workspace = true
name = "minigu-ir"
repository.workspace = true
version.workspace = true

[dependencies]
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }

[lints]
workspace = true
