[package]
edition.workspace = true
name = "gql-parser"
version = "0.1.0"

[dependencies]
itertools = { workspace = true }
logos = { version = "0.15.0", default-features = false, features = [
    "export_derive",
] }
macro_rules_attribute = "0.2.0"
miette = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
winnow = { version = "0.7.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
divan = { workspace = true }
insta = { workspace = true }
paste = { workspace = true }

[build-dependencies]
cmake = { version = "0.1.54", optional = true }

[features]
bench-antlr4 = ["std", "dep:cmake"]
default = ["std"]
miette = ["std", "dep:miette"]
serde = ["dep:serde", "smol_str/serde"]
std = [
    "logos/std",
    "serde?/std",
    "itertools/use_std",
    "winnow/std",
    "smol_str/std",
    "thiserror/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "alloc"

[[bench]]
harness = false
name = "parse"

[[test]]
name = "parser_test"
required-features = ["std", "serde"]
