[package]
edition.workspace = true
license.workspace = true
name = "gql-parser"
repository.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true }
logos = { workspace = true }
macro_rules_attribute = { workspace = true }
miette = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
insta = { workspace = true }
pastey = { workspace = true }

[build-dependencies]
cmake = { workspace = true, optional = true }

[features]
bench-antlr4 = ["std", "dep:cmake"]
default = ["std"]
miette = ["std", "dep:miette"]
serde = ["dep:serde", "smol_str/serde"]
std = [
    "logos/std",
    "serde?/std",
    "itertools/use_std",
    "winnow/std",
    "smol_str/std",
    "thiserror/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "alloc"

[[bench]]
harness = false
name = "parse"

[[test]]
name = "parser_test"
required-features = ["std", "serde"]
