[package]
edition.workspace = true
license.workspace = true
name = "minigu-planner"
repository.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true }
miette = { workspace = true }
minigu-common = { workspace = true }
minigu-ir = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
