[package]
name = "minigu-python"
version = "0.1.0"
edition = "2024"
authors = ["TuGraph Open Source Team"]
description = "Python bindings for miniGU graph database"
readme = "README.md"
repository = "https://github.com/TuGraph-family/miniGU"
license = "Apache-2.0"
keywords = ["graph", "database", "gql", "python"]
categories = ["database"]

[lib]
name = "minigu_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py37"] }
minigu = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]