[package]
edition.workspace = true
license.workspace = true
name = "minigu-python"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "minigu_python"

[dependencies]
arrow = { workspace = true }
minigu = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py37"] }

[build-dependencies]
pyo3-build-config = "0.24.2"

[features]
extension-module = ["pyo3/extension-module"]

[target.'cfg(target_os = "macos")'.build]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[lints]
workspace = true
