[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
name = "minigu"
version = "0.1.0"
description = "A graph database for learning purposes"
authors = [{ name = "miniGU Team" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/TuGraph-family/miniGU"
Repository = "https://github.com/TuGraph-family/miniGU"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "minigu.minigu_python"
