[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "minigu-python"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "A graph database for learning purposes"
authors = [{ name = "miniGU Team" }]

[project.urls]
Homepage = "https://github.com/TuGraph-family/miniGU"
Repository = "https://github.com/TuGraph-family/miniGU"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "minigu_python.minigu_python"
python-source = "minigu"

[tool.maturin.target."aarch64-apple-darwin"]
# macOS特定配置
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
