[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [{ name = "miniGU Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
description = "A graph database for learning purposes"
name = "minigu"
requires-python = ">=3.7"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/TuGraph-family/miniGU"
Repository = "https://github.com/TuGraph-family/miniGU"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "minigu.minigu_python"
python-source = "."

[tool.maturin.env]
# macOS specific environment variables
MACOSX_DEPLOYMENT_TARGET = "10.12"
