[package]
edition.workspace = true
license.workspace = true
name = "minigu-storage"
repository.workspace = true
version.workspace = true

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }

[dependencies]
chrono = { workspace = true }
crc32fast = { workspace = true }
crossbeam-skiplist = { workspace = true }
dashmap = { workspace = true }
minigu-common = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

bitvec = { workspace = true }

[lints]
workspace = true
